# uplare

./: .gitignore  .rustfmt.toml  Cargo.toml  README.md
.github/workflows/: build-release.yml  release.yml
pkl/: FileCheck.pkl  MacOs.pkl  Path.pkl  PklProject  SteamOs.pkl
pkl/examples/: macos-custom-properties.pkl  macos.pkl  steamos-extra-constraints-files-helper.pkl  steamos-extra-constraints.pkl  steamos.pkl
pkl/tests/: FileCheck.pkl  MacOs.pkl  SteamOs.pkl  examples.pkl  examples.pkl-expected.pcf
src/: macos.rs  main.rs  steamos.rs
src/differs/: macos.rs  steamos.rs
src/fetchers/: macos.rs  mod.rs  steamos.rs
src/fetchers/macos/: brew.rs  mod.rs
src/file_checks/: diff.rs  mod.rs  shared.rs  sync.rs
src/pkl_types/: file_check.rs  macos.rs  mod.rs  steamos.rs
