[package]
name = "uplare"
version = "0.1.1"
edition = "2024"

description = "A CLI tool for keeping a system config up-to-date"
repository = "https://github.com/nihaals/uplare"
license = "GPL-3.0"
categories = ["command-line-utilities", "config", "filesystem"]
include = ["/src/", "/LICENSE"]

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
clap_complete_command = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
steam-vdf-parser = "0.1"
thiserror = "2"
validator = { version = "0.20", features = ["derive"] }
which = "8"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-cli-{ target }{ archive-suffix }"
pkg-fmt = "bin"
