[package]
name = "uplare"
version = "0.2.0"
edition = "2024"

description = "A CLI tool for keeping a system config up-to-date"
repository = "https://github.com/nihaals/uplare"
license = "GPL-3.0"
categories = ["command-line-utilities", "config", "filesystem"]
include = ["/src/", "/LICENSE"]

[dependencies]
aho-corasick = "1"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
clap_complete_command = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
steam-vdf-parser = "0.1"
thiserror = "2"
validator = { version = "0.20", features = ["derive"] }
which = "8"

[dev-dependencies]
tempfile = "3"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-cli-{ target }{ archive-suffix }"
pkg-fmt = "bin"
